undo heroku commit

--- a/response.html
+++ b/response.html
@@ -1,1 +1,1 @@
-{"cellphone": "852-348-4758", "firstname": "Fkf", "dob": "1982-07-25", "lastname": "Wggnfaioe", "avg_rating": 4.27421155688634, "driver": true, "errCode": 1, "comments": "wavhxpoibogwwbxwnfqwzdduvnejgrmixtg qdqyqtwgqappca", "sex": "female", "email": "289oly8@carpoolapp.com", "id": 761}
+{"errCode": -16}
